# bdbc-data-pipeline

./: .gitignore  .gitmodules  LICENSE  README.md  cuda-environment.md  env.template.sh  install.py  process.sh  setup.cfg
docs/: README.md
docs/resource/: diagram.drawio
requirements-python3.10/: requirements-all.txt  requirements-atlas.txt  requirements-browse.txt  requirements-core.txt  requirements-video.txt
