[metadata]
name = bdbc-data-pipeline
version = 1.0.0
author = ["Keisuke Sehara", "Ryo Aoki", "Shoya Sugimoto"]
author_email = keisuke.sehara@gmail.com
description = set of tools and procedures to iterate over, parse from, and work on the files for BraiDyn-BC project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BraiDyn-BC/bdbc-data-pipeline
project_urls =
    Bug Tracker = https://github.com/BraiDyn-BC/bdbc-data-pipeline/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.9
install_requires =

[flake8]
ignore =
    E501
    E221
    E241
    E712

